glob for all test_* notebooks for conversion

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,7 +1,7 @@
 all: convert tests
 
 convert:
-	jupyter nbconvert --to python test_config.ipynb
+	jupyter nbconvert --to python test_*.ipynb
 
 tests:
 	py.test --cov
