--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -31,8 +31,8 @@ jobs:
       uses: actions/cache@v3
       with:
         path: |
-          ${{ env.CONDA }}/envs/test_env
-          ${{ env.CONDA }}/pkgs
+          $CONDA/envs/test_env
+          $CONDA/pkgs
         key: conda-${{ runner.os }}-${{ hashFiles('pyproject.toml') }}
         restore-keys: |
           conda-${{ runner.os }}-
