Refactor GitHub Actions workflow to simplify dependency installation by using an installation script.

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -40,22 +40,11 @@ jobs:
     - name: Install dependencies
       shell: bash -l {0}
       run: |
-        # Install tomlkit first to read pyproject.toml
-        mamba install -y -c conda-forge tomlkit pip make
+        # Install tomlkit and sh first to run the installation script
+        mamba install -y -c conda-forge tomlkit sh
         
-        # Use Python to get dependencies from pyproject.toml
-        DEPS=$(python -c "
-        import tomlkit
-        with open('pyproject.toml', 'r') as f:
-            pyproject = tomlkit.load(f)
-        deps = pyproject['project']['dependencies']
-        dev_deps = pyproject['project']['optional-dependencies']['dev']
-        all_deps = deps + dev_deps
-        print(' '.join(all_deps))
-        ")
-        
-        # Install all dependencies
-        mamba install -y -c conda-forge $DEPS
+        # Run the installation script
+        python install_dev_deps.py
 
     - name: Install package
       shell: bash -l {0}
