Add astropy to project dependencies in pyproject.toml.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "requests",
     "tqdm",
     "pandas",
+    "astropy",
 ]
 repository = "https://github.com/planetarypy/planetarypy"
 
