Add spiceypy, yarl, and matplotlib to project dependencies in pyproject.toml.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,9 @@ dependencies = [
     "tqdm",
     "pandas",
     "astropy",
+    "spiceypy",
+    "yarl",
+    "matplotlib",
 ]
 repository = "https://github.com/planetarypy/planetarypy"
 
