--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -55,4 +55,11 @@ jobs:
     - name: Run tests
       shell: bash -l {0}
       run: |
-        make test
+        pytest --cov=planetarypy --cov-report=xml
+
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v3
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        files: ./coverage.xml
+        fail_ci_if_error: true
