--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -56,7 +56,7 @@ jobs:
     - name: Run tests
       shell: bash -l {0}
       run: |
-        pytest --cov=planetarypy --cov-report=xml
+        pytest --cov=src/planetarypy --cov-report=xml --cov-report=term
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
